<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/arkaplan"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="30dp"
            android:text="@string/Boy"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="28dp" />

        <EditText
            android:id="@+id/boyEt"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="90dp"
            android:digits="0123456789"
            android:ems="10"
            android:inputType="number"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="59dp" />

        <TextView
            android:id="@+id/boyTv"
            android:layout_marginTop="-30dp"
            android:layout_marginLeft="97dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/Kilo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="118dp" />

        <SeekBar
            android:id="@+id/kiloSb"
            android:layout_width="197dp"
            android:layout_height="31dp"
            android:layout_marginLeft="90dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="149dp" />

        <TextView
            android:id="@+id/kiloTv"
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="95dp"
            android:gravity="center"
            android:text="50 kg"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="180dp" />


        <TextView
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/Cinsiyet"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="240dp" />

        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="197dp"
            android:layout_height="31dp"
            android:layout_marginLeft="90dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="94dp"
            tools:layout_editor_absoluteY="268dp">

            <RadioButton
                android:id="@+id/woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/Kadın" />

            <RadioButton
                android:id="@+id/man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Erkek" />
        </RadioGroup>


        <TextView
            android:layout_width="108dp"
            android:layout_height="30dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/idealKilo"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="319dp" />

        <TextView
            android:id="@+id/idealKiloTv"
            android:layout_width="197dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:background="@color/OldLace"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="350dp" />


        <TextView
            android:layout_width="82dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:text="@string/Durum"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="395dp" />

        <TextView
            android:id="@+id/durumTv"
            android:layout_width="197dp"
            android:layout_height="31dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_marginLeft="90dp"
            android:background="@color/OldLace"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="87dp"
            tools:layout_editor_absoluteY="426dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>

